# ClosedAI-Fitness-Tracker-API

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  main.py  pyproject.toml
fitness_api/: settings.py
fitness_api/core/: database.py  db_functions.py  logging.py  models.py  schemas.py  services.py
fitness_api/routes/: exercise.py  friendship.py  lang.py  rating.py  tag.py  token.py  user.py  user_exercise.py  workout.py  workout_plan.py
tests/: test_routes.py
